--- a/index.html
+++ b/index.html
@@ -1,28 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | QR code component</title>
 
-  Improve your front-end skills by building projects
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+
+      .outfit-bold {
+        font-family: "Outfit", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 120%;
+        font-style: normal;
+      }
+
+      .outfit-regular {
+        font-family: "Outfit", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 140%;
+        letter-spacing: 0.2px;
+        font-style: normal;
+      }
+
+      * {
+        margin: 0;
+      }
+
+      body {
+        --cl-white: hsl(0, 0%, 100%);
+        --cl-slate-300: hsl(212, 45%, 89%);
+        --cl-slate-500: hsl(216, 15%, 48%);
+        --cl-slate-900: hsl(218, 44%, 22%);
+
+        --ly-mobile: 375px;
+        --ly-desktop: 1440px;
+
+        --spacing-500: 40px;
+        --spacing-300: 24px;
+        --spacing-200: 16px;
+
+        background: var(--cl-slate-300);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: max-content;
+        flex-direction: column;
+        height: 95vh;
+      }
+
+      .qr__container {
+        background: var(--cl-white);
+        width: 320px;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 20px;
+        padding: var(--spacing-200);
+        padding-bottom: var(--spacing-500);
+        justify-content: space-between;
+        margin-bottom: 5vh;
+      }
+
+      .qr__img {
+        border-radius: 20px;
+      }
+
+      .qr__header,
+      .qr__text {
+        text-align: center;
+        margin: 0 var(--spacing-200);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="qr__container">
+      <img src="./images/image-qr-code.png" alt="" class="qr__img" />
+
+      <h2 class="qr__header outfit-bold">
+        Improve your front-end skills by building projects
+      </h2>
+      <p class="qr__text outfit-regular">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/damayor">David Mayo</a>.
+    </div>
+  </body>
 </html>
