Solution improved after comparison

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         font-size: 22px;
         line-height: 120%;
         font-style: normal;
+        color: var(--cl-slate-900);
       }
 
       .outfit-regular {
@@ -35,6 +36,8 @@
         line-height: 140%;
         letter-spacing: 0.2px;
         font-style: normal;
+        color: var(--cl-slate-500);
+
       }
 
       * {
@@ -73,7 +76,6 @@
         padding: var(--spacing-200);
         padding-bottom: var(--spacing-500);
         justify-content: space-between;
-        margin-bottom: 5vh;
       }
 
       .card__qr {
@@ -96,6 +98,8 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        position: fixed;
+        bottom: var(--spacing-300);
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
